# shadow3

./: IDL_Shadow.c  IDL_ShadowLoader.c  IDL_ShadowLoader.h  LOG.TXT  MANIFEST.in  Makefile  Makefile_use_precompiler  README.TXT  README.md  README.txt  README_API.TXT  README_API.txt  README_CRL.txt  README_FIRST.txt  README_MPI.txt  README_PYTHON.txt  README_ShadowPreprocessorsXraylib.txt  README_ShadowTools.txt  README_WINDOWS.txt  SRW2SHADOW_Example01.py  ShadowLibExtensions.py  ShadowMask.c  ShadowMask.cpp  ShadowMask.def  ShadowMask.h  ShadowMask.hpp  ShadowMaskOE.def  ShadowMaskOEwithoutRepetitions.def  ShadowMaskSource.def  ShadowPreprocessorsXraylib.py  ShadowSrw.py  ShadowTools.py  ShadowToolsPrivate.py  Shadow_python.c  Shadow_python.h  __init__.py  beamio.f90  beamio.f95  build_mac.txt  cdf_z.f  (+116 more)
PRIMER_INPUT_FILES/: README.txt  primer.sh  primer_ch24_run1.inp  primer_ch24_run1.py  primer_ch24_run1.ws  primer_ch26_run1.inp  primer_ch61_pixelized.inp  primer_ch62_recolor.inp  primer_ch62_run2.inp  primer_ch63_results2.inp  primer_ch63_run1.inp  primer_ch63_run2.inp  primer_ch64_bragg.inp  primer_ch64_run1.inp  primer_ch64_run2.inp
Shadow/: ShadowLib.pyd  ShadowLibExtensions.py  ShadowPreprocessorsXraylib.py  ShadowTools.py  ShadowToolsPrivate.py  __init__.py
YB66/: JUMBO_YB66.ows  Paper Fig.7.ows  README.md  _xraylib.cp38-win_amd64.pyd
docs/: LOG.TXT  README_API.txt  README_CRL.txt  README_MPI.txt  README_WINDOWS.txt  oe.nml
examples/: SRW2SHADOW_Example01.py  example_tolerances.py
src/windows/: CMakeLists.txt  README.txt  compile_gfortran.bat
(+155 files in other folders)
